@@ -1,2 +1,2 @@
 cd .\src 
-java pers.zylo117.spotspotter.mainprogram.Main
+java -Djava.library.path=D:\workspace\SpotSpotter\src -Djava.ext.dirs=D:\workspace\SpotSpotter\lib pers.zylo117.spotspotter.mainprogram.Main
